# planner

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  app.backend.dockerfile  docker-compose.yml  package-lock.json  package.json  requirements.txt  requirements_dev.txt  setup.sh  setup_dev.sh  setup_prod.sh
backend/: .env  .env.example  Makefile  admin.py  api_urls.py  api_views.py  apps.py  asgi.py  auth.py  consumers.py  migrate.sh  models.py  permissions.py  pyproject.toml  requirements.txt  routing.py  serializers.py  settings.py  settings_prod.py  urls.py  utils.py  views.py  wsgi.py
backend/api/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  utils.py
backend/api/auth/: urls.py  views.py
backend/api/chat/: urls.py  views.py
backend/api/error/: views.py
backend/api/project/: urls.py  views.py
backend/api/task/: urls.py  views.py
backend/api/user/: urls.py  views.py
backend/server/: asgi.py  settings.py  urls.py  wsgi.py
backend/templates/: index.html
backend/websocket/: consumers.py  routing.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig-app.json  tsconfig-node.json  tsconfig.json  vite.config.ts  webpack.common.js  webpack.dev.js  webpack.prod.js
frontend/src/: App.js  App.scss  App.tsx  ProjectsContext.js  Theme.js  api.js  auth.js  index.js  index.scss  index.tsx
frontend/src/api/: client.js  (+3 more)
frontend/static/: manifest.json
frontend/templates/: dev.html  index.html
planner/: asgi.py  settings.py  settings_prod.py  urls.py
static/: .placeholder
(+145 files in other folders)
