[tool.poetry]
name = "planner-backend"
version = "2.0.0"
description = ""
authors = ["kftlfd <kftlfd@ex.ua>"]
license = "GPL-3.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.0.5"
djangorestframework = "^3.13.1"
channels = "^3.0.5"
daphne = "^3.0.2"
whitenoise = "^6.2.0"
python-dotenv = "^0.21.1"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
